syntax = "proto3";

option java_multiple_files = true;

message SubscribeReqProto {
  int32 subReqID = 1;
  string userName = 2;
  string productName = 3;
  string phoneNumber = 4;
  repeated string address = 5;
}

message SubscribeRespProto {
  int32 subReqID = 1;
  int32 respCode = 2;
  string desc = 3;
}